# hiperwalk

./: .gitignore  .readthedocs.yaml  AnimationModule.py  AuxiliaryFunctions.py  CoinedModel.py  Coined_QW_Adjacency_Matrix-v2.ipynb  Constants.py  Dockerfile  FuncAnimationCollectionExample.py  ModifiedNetworkXFunctions.py  PlotModule.py  PyneblinaInterface.py  README.md  buildHW_DockerFile  build_and_upload_to_pypi  coinless1d.nbl  coinless1d.py  coinless2d.nbl  coinless2d.py  comandos.txt  comandosDocker.txt  config.py  configSD.sh  constants.py  custom.nbl  custom.py  distance.py  docker-compose.yml  dtqw1d.nbl  dtqw1d.py  dtqw2d.nbl  dtqw2d.py  gnuplot.py  hiperwalk.py  instalarT.sh  install.sh  ioFunctions.py  medicoesSDHypercubeExp.txt  neblina.py  operators.py  (+20 more)
.github/workflows/: rebuild_project_page.yml
Archive/: custom.py  ioFunctions.py  operators.py  staggered1d.py  staggered2d.py  state.py  walks.py
Archive/examples/: coined2D.in  staggered1D.in  staggered2D.in
Examples/: animation.ipynb  general-horizontal-lattice-walk.ipynb  horizontal-lattice-walk.py  line-walk.ipynb  old_vs_new_FlipFlopShiftOperator.py  plot.py  specific-line-walk.ipynb  test-different-animations.py  test-different-plots.py
docs/: README.md  README.rst  conf.py  go  graph_constructors.rst  index.rst  install.sh  requirements.txt  test_docs
docs/_static/: switcher.json
docs/_templates/: autoclass.rst  autofunctions.rst  automodule.rst
docs/development/: index.rst
docs/documentation/: generator.rst  graph.rst  hpc.rst  index.rst  plot.rst  quantum_walk.rst  simulator.rst
docs/examples/: index.rst
docs/graphviz/: coined-model-edges-labels.dot  coined-segment-edges-labels.dot  cycle-arcs.dot  line-arcs.dot
docs/install/: index.rst
docs/reference/: AnimationModule.rst  Coined.rst  CoinedModel.rst  Constants.rst  PlotModule.rst  PyneblinaInterface.rst  coined.rst  constants.rst  continuous.rst  index.rst  plot.rst  qwalk.rst
docs/source/: conf.py  index.rst
docs/tutorial/: graph_constructors.rst  graphs.rst  index.rst  plotting.rst  plotting_customization.rst  quantum_walk_models.rst
examples/: CTQW-on-cycle.ipynb  coined-QW-on-hypercube.ipynb  coined-bipartite-search.py  coined-complete-search.py  coined-cycle.py  coined-diagonal-grid.py  coined-diagonal-lattice.py  coined-generic.py  coined-graph.py  coined-grid-search.py  coined-hypercube.py  coined-line.py  coined-segment.py  coined1D.in  coined2D.in  coinless1D.in  coinless2D.in  cont-generic.py  continuous-cycle.py  custom.in  deleteme.py  general-horizontal-lattice-walk.ipynb  graph_test-0  graph_test-2  graph_test-4  grovers-algorithm.py  horizontal-lattice-walk.py  hpc-coined-line.py  no-neblina.py  non-hpc-coined-line.py  refactor.py  specific-horizontal-lattice-walk.ipynb
examples/coined/: .hypercubeCPLX.py.swo  Bhypercube.py  bipartite-search.py  coinedQW-on-grid.ipynb  customized-coin-on-line.ipynb  diagonal-grid.py  diagonal-gridHB.py  diagonal-gridSciPy.py  diagonal-gridStencil.py  grid-search.py  grovers-algorithm.py  grovers-algorithmStencil.py  hypercube.py  hypercubeCPLX.py  hypercubeF.py  hypercubeHB.py  hypercubeSciPy.py  hypercubeStencil.py
examples/continuous_time/: CTQW-on-cycle.ipynb  cycle.py  hypercube-search-Hiperwalk-Qiskit.py  perfect-state-transfer.ipynb
examples/legacy/: coined-cycle.py  graph_test-1  graph_test-3  graph_test-5  graph_test-6  graph_test-7  graph_test-8  graph_test-9  specific-diagonal-lattice-walk.ipynb  test-different-animations.py
hiperblas-core/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Dockerfile  ExemploMatrizEsparsa.ods  Makefile  README  README.md  cmake_install.cmake  comandos.txt  compilarTestes.sh  complexos  instalarHB.sh  install_manifest.txt  limpar.sh  matrix_test  mudarNomesNeb2HB.sh  neblina_test  sparse_matrix_test  sparse_matrix_test-PC13102  vector_test
hiperblas-core/include/: bridge_api.h  hiperblas.h  hiperblas_complex.h  hiperblas_list.h  hiperblas_matrix.h  hiperblas_smatrix.h  hiperblas_std.h  hiperblas_vector.h  libhiperblas.h
hiperblas-core/scripts/: coverage.sh
hiperblas-core/src/: .hiperblas_std.c-PC13102-2.swo  .hiperblas_std.c-PC13102.swo  hiperblas_std.c  libhiperblas-cpu-bridge-api-impl.c  libhiperblas-cpu-bridge-complex.c  libhiperblas-cpu-bridge-list.c  libhiperblas-cpu-bridge-matrix.c  libhiperblas-cpu-bridge-smatrix.c  libhiperblas-cpu-bridge-vector.c  libhiperblas.c
hiperblas-core/test/: 00sparse_matrix_test.cpp  sparseMatrixTest.cpp  sparse_matrix_test.cpp  sparse_matrix_testBD.cpp  vectorTest.cpp  vector_test.cpp
hiperwalk/: __init__.py  _constants.py  _pyneblina_interface.py  renato.py
hiperwalk/graph/: __init__.py  _sym_dir_multigraph.py  complete.py  complete_bipartite.py  cycle.py  graph.py  grid.py  hypercube.py  integer_lattice.py  lattice.py  line.py  multigraph.py  square_lattice.py  weighted_graph.py
hiperwalk/plot/: __init__.py  _animation.py  _gtk4_gif_paintable.py  _plot.py
hiperwalk/quantum_walk/: 03quantum_walk.py  13quantum_walk.py  __init__.py  _pyhiperblas_interface.py  _pyneblina_interface.py  coined.py  coined_walk.py  continuous_time.py  continuous_walk.py  generator.py  quantum_walk.py
plot/: _animation.py  _plot.py  plot.py
pyhiperblas/: .gitignore  00setup.py  00test_numpy_vector_smatrix.py  01test_numpy_vector_smatrix.py  03hiperblas_wrapper.c  1  Dockerfile  SmatrixVectorTest.py  comandos.txt  hiperblas_wrapper.c  hiperblas_wrapper32.c  instalarPyHB.sh  old_test_numpy_vector_smatrix.py  pyproject.toml  setup-pc013047.py  setup.py  sparse_matrix_test.py  sparse_matrix_testDG.py  sparse_matrix_testDiagGridExp.py  test.py  test_numpy_matrix.py  test_numpy_smatrix.py  test_numpy_vector.py  test_numpy_vector_matrix.py  test_numpy_vector_smatrix.py
qwalk/: __init__.py  _base_walk.py  _coined.py  _pyneblina_interface.py  base_walk.py  coined.py  cycle.py  line.py  segment.py
qwplot/: __init__.py  _animation.py  _plot.py
tests/: meuTeste.sh  run_all.sh  run_hpc.sh  run_hpc_cpu.sh  run_hpc_gpu.sh  run_hpc_none.sh  run_nonhpc.sh  test_constants.py
(+148 files in other folders)
